16 refactor : 코드 포매팅 빌드에러수정

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,7 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "airbnb",
-    "airbnb-typescript",
-    "plugin:prettier/recommended",
-    "prettier"
-  ],
+  "extends": ["next/core-web-vitals", "airbnb", "airbnb-typescript", "plugin:prettier/recommended", "prettier"],
   "parserOptions": {
     "project": "./tsconfig.json"
-
   },
   "rules": {
     "react/react-in-jsx-scope": "off"
