--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "lucide-react": "^0.454.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
