--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:fix": "eslint --fix './src/**/*.{ts,tsx,js,jsx}'"
   },
   "dependencies": {
+    "cookie": "^1.0.1",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.454.0",
     "next": "14.2.13",
