--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lucide-react": "^0.454.0",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^20",
