--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
