--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "sockjs-client": "^1.6.1"
+    "sockjs-client": "^1.6.1",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
